# restaurantiq-amazon

./: .gitignore  AI_RULES.md  CLAUDE_CODE_FIX_PROMPT.md  CONTRIBUTING.md  HACKATHON_UPGRADE_PROMPT.md  README.md  SECURITY.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS  (+1 more)
restaurantiq-agents/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
restaurantiq-agents/app/: config.py  main.py
restaurantiq-agents/app/agents/: __init__.py  analyzer.py  base.py  collector_macro.py  collector_ops.py  collector_social.py  custom_generic.py  execution_planner.py  executor_inventory.py  executor_marketing.py  executor_pricing.py  executor_reviews.py  executor_scheduling.py  executor_social.py  planner_strategy.py  registry.py  validator_output.py
restaurantiq-agents/app/api/: agents.py  executions.py  pipelines.py  security.py  websocket.py
restaurantiq-agents/app/db/: models.py
restaurantiq-agents/app/llm/: openai_json.py
restaurantiq-agents/app/models/: agent_config.py  execution.py  recommendation.py  task.py
restaurantiq-agents/app/orchestrator/: dag_pipeline.py  default_pipeline.py  router.py  scheduler.py  supervisor.py
restaurantiq-agents/app/prompts/: analyzer.j2  collector_macro.j2  collector_ops.j2  collector_social.j2  executor.j2  loader.py  planner_strategy.j2  supervisor.j2  validator_output.j2
restaurantiq-agents/app/state/: pipeline_store.py  snapshot.py  store.py
restaurantiq-agents/tests/test_api/: test_health.py
restaurantiq-agents/tests/test_orchestrator/: test_dag_pipeline.py
(+307 files in other folders)
